fixed the image size on mobilegit oush

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ nav {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
+nav a img {
+    height: 60px;
+}
+
 section {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -50,6 +54,9 @@ section img {
 }
 
 @media only screen and (max-width: 1200px) {
+    nav a img {
+        height: 40px;
+    }
     section h1 {
         color: #444444;
         font-size: 40px;
